--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,15 +20,15 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-	"folium~=0.14.0",
-	"geopandas~=0.9.0",
-	"ipython~=7.29.0",
-	"ipywidgets~=7.6.5",
-	"matplotlib~=3.4.3",
-	"numpy~=1.26.3",
-	"pandas~=1.3.4",
-	"requests~=2.31.0",
-	"seaborn~=0.11.2"
+	"folium>=0.14.0",
+	"geopandas>=0.9.0",
+	"ipython>=7.29.0",
+	"ipywidgets>=7.6.5",
+	"matplotlib>=3.4.3",
+	"numpy>=1.26.3",
+	"pandas>=1.3.4",
+	"requests>=2.31.0",
+	"seaborn>=0.11.2"
 ]
 
 [project.urls]
