--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
 	"ipython>=7.29.0",
 	"ipywidgets>=7.6.5",
 	"matplotlib>=3.4.3",
-	"numpy>=1.26.3",
+	"numpy==1.23.5",
 	"pandas>=1.3.4",
 	"requests>=2.31.0",
 	"seaborn>=0.11.2"
