--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ Pipfile
 Pipfile.lock
 dist/.DS_Store
 Untitled.ipynb
+.ipynb_checkpoints/Untitled-checkpoint.ipynb
+.DS_Store
+.cache
+.DS_Store
+*.pyc
+requirements.txt
