--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ version = "0.2.0"
 authors = [
 	{name = "Steve Hansen", email = "steven.e.hansen@gmail.com"}, 
 	{name="Eric Nost", email="enost@uoguelph.ca" }, 
-	{name="Kelsey Breseman", email="ifoundthemeaningoflife@gmail.com" }, 
+	{name="Sung-Gheel Jang", email="sunggheel.jang@stonybrook.edu" }, 
+	{name="Yemoe Aung", email="enost@uoguelph.ca" }, 
+	{name="Kelsey Breseman", email="ye.m.aung@stonybrook.edu" }, 
 	{name = "EDGI", email = "contact@envirodatagov.org"}
 ]
 readme = "README.md"
