--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ authors = [
 	{name = "EDGI", email = "contact@envirodatagov.org"}
 ]
 readme = "README.md"
-description = "Python package for analyzing the US Environmental Protection Agency's Enforcement and Compliance History Online database"
+description = "Python package for analyzing the US Environmental Protection Agency's Enforcement and Compliance History Online and Risk Screening Environmental Indicator databases"
 license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
