--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+	"delta-spark==3.3.0",
+	"deltalake==0.16.4",
 	"folium>=0.14.0",
 	"geopandas>=0.9.0",
 	"ipyleaflet==0.19.2",
@@ -30,8 +32,10 @@ dependencies = [
 	"matplotlib>=3.4.3",
 	"numpy==2.0.2",
 	"pandas>=1.3.4",
+	"pyspark>=3.5.4",
 	"requests>=2.31.0",
-	"seaborn>=0.11.2"
+	"seaborn>=0.11.2",
+	"tqdm"
 ]
 
 [project.urls]
